--- a/force-app/main/default/classes/ToolingAPIHelper.cls
+++ b/force-app/main/default/classes/ToolingAPIHelper.cls
@@ -1,11 +1,18 @@
 public with sharing class ToolingAPIHelper 
 {
+    public static string SelectMetadata(string metadata)
+    {
+        string selectQuery = 'SELECT MetadataComponentId, MetadataComponentName, MetadataComponentType, RefMetadataComponentId, RefMetadataComponentName, RefMetadataComponentType FROM MetadataComponentDependency';
+        string whereQuery = ' WHERE RefMetadataComponentType = \'' + metadata + '\'';
+        string completeQuery = selectQuery + whereQuery;
+        return SendAPIRequest(completeQuery);
+    }
+
     public static string SendAPIRequest(string query)
     {
         string instanceUrl = URL.getSalesforceBaseUrl().toExternalForm();
         string toolingApiUrl = '/services/data/v48.0/tooling/query?q=';
         string completeUrl = instanceUrl + toolingApiUrl + EncodingUtil.urlEncode(query, 'UTF-8');
-        system.debug(completeUrl);
 
         HttpRequest request = new HttpRequest();
         request.setEndpoint(completeUrl);
@@ -17,7 +24,7 @@ public with sharing class ToolingAPIHelper
         HttpResponse response = http.send(request);
 
         string responseJson = response.getBody();
-        system.debug(responseJson);
+        
         return responseJson;
     }
 }
