Code Changes to Component and API Auth

--- a/force-app/main/default/classes/ToolingAPIHelper.cls
+++ b/force-app/main/default/classes/ToolingAPIHelper.cls
@@ -4,20 +4,24 @@ public with sharing class ToolingAPIHelper
     {
         string selectQuery = 'SELECT MetadataComponentId, MetadataComponentName, MetadataComponentType, RefMetadataComponentId, RefMetadataComponentName, RefMetadataComponentType FROM MetadataComponentDependency';
         string whereQuery = ' WHERE RefMetadataComponentType = \'' + metadata + '\'';
-        string completeQuery = selectQuery + whereQuery;
-        return SendAPIRequest(completeQuery);
+
+        if(!string.isEmpty(metadata))
+        {
+            string completeQuery = selectQuery + whereQuery;
+            return SendAPIRequest(completeQuery);
+        }
+        
+        return SendAPIRequest(selectQuery);
     }
 
     public static string SendAPIRequest(string query)
     {
-        string instanceUrl = URL.getSalesforceBaseUrl().toExternalForm();
         string toolingApiUrl = '/services/data/v48.0/tooling/query?q=';
-        string completeUrl = instanceUrl + toolingApiUrl + EncodingUtil.urlEncode(query, 'UTF-8');
+        string completeUrl = toolingApiUrl + EncodingUtil.urlEncode(query, 'UTF-8');
 
         HttpRequest request = new HttpRequest();
-        request.setEndpoint(completeUrl);
+        request.setEndpoint('callout:MetadataVisualizerNamedCredentials' + completeUrl);
         request.setHeader('Content-Type', 'application/json');
-        request.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
         request.setMethod('GET');
 
         Http http = new Http();
