--- a/force-app/main/default/classes/ToolingApiHelperTest.cls
+++ b/force-app/main/default/classes/ToolingApiHelperTest.cls
@@ -2,10 +2,19 @@
 public with sharing class ToolingApiHelperTest 
 {
     @isTest 
-    static void SendAPIRequestTest()
+    static void SelectMetadataTest()
     {
         Test.setMock(HttpCalloutMock.class, new ToolingApiMock());
-        string response = ToolingApiHelper.SendAPIRequest('SELECT MetadataComponentId, MetadataComponentName, MetadataComponentType, RefMetadataComponentId, RefMetadataComponentName, RefMetadataComponentType FROM MetadataComponentDependency');
+        string response = ToolingApiHelper.SelectMetadata('CustomObject');
+
+        system.assertNotEquals(null, response);
+    }
+
+    @isTest 
+    static void SelectMetadataEmptyTest()
+    {
+        Test.setMock(HttpCalloutMock.class, new ToolingApiMock());
+        string response = ToolingApiHelper.SelectMetadata(null);
 
         system.assertNotEquals(null, response);
     }
