Reference Metadata Types and Eventing

--- a/force-app/core-package/main/default/classes/MetadataSelectorController.cls
+++ b/force-app/core-package/main/default/classes/MetadataSelectorController.cls
@@ -1,8 +1,8 @@
 public with sharing class MetadataSelectorController 
 {
     @AuraEnabled(cacheable=true)
-    public static string RetrieveDependencies(string selectedMetadata) 
+    public static string RetrieveDependencies(string selectedMetadata, string referenceMetadataTypes) 
     {
-        return ToolingApiHelper.SelectMetadata(selectedMetadata);
+        return ToolingApiHelper.SelectMetadata(selectedMetadata, referenceMetadataTypes);
     }
 }
